Gerekli Db nin  ve Entitylerin Oluşturulması  Ortamın Hazırlanması

--- a/JwtAppWebApı/appsettings.json
+++ b/JwtAppWebApı/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Local": "Server=DESKTOP-LRDHV9F;Database=JwtAndCQRSApp;Trusted_Connection=True;Connect Timeout=30;MultipleActiveResultSets=True;"
+  },
   "AllowedHosts": "*"
 }
