--- a/JwtAppWebApı/JwtAppWebApı.csproj
+++ b/JwtAppWebApı/JwtAppWebApı.csproj
@@ -22,8 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Core\Application\" />
-    <Folder Include="Migrations\" />
+    <Folder Include="Persistance\Migrations\" />
   </ItemGroup>
 
 </Project>
